# phantomlink

./: .SRCINFO  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GHOSTNV.md  GHOSTNV_INTEGRATION.md  GHOSTNV_INTEGRATION_GUIDE.md  PKGBUILD  README.md  SECURITY.md  TODO.md  install.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: GHOSTWAVE_INTEGRATION.md  GUI_REDESIGN.md  README.md  VST_IMPLEMENTATION.md  advanced_denoising.md  features.md  getting-started.md  ghostwave.md  scarlett-setup.md  troubleshooting.md
docs/installation/: README.md  appimage.md  arch.md  fedora.md  pop-os.md  ubuntu.md
docs/integrations/: ghostwave.md
examples/: test_vst.rs
packaging/: phantomlink.desktop
packaging/appimage/: AppImageBuilder.yml  build-appimage.sh
packaging/arch/: .SRCINFO  PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: phantomlink.spec
scripts/: bump-version.sh
src/: advanced_denoising.rs  app_audio.rs  audio.rs  audio_effects.rs  config.rs  ghostnv.rs  ghostnv_bridge.rs  ghostnv_mock.rs  ghostwave_integration.rs  gpu.rs  gui.rs  ipc.rs  jack_client.rs  main.rs  phantomlink.rs  pipewire.rs  rnnoise.rs  scarlett.rs  vst_host.rs
src/gui/: applications.rs  enhanced_methods.rs  mixer.rs  mod.rs  production_enhancements.rs  theme.rs  visualizer.rs  waveform.rs  widgets.rs
