[package]
name = "phantomlink"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = "0.27"
dirs = "5"
alsa = "0.7"
cpal = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nnnoiseless = "0.5"
anyhow = "1.0"
vst = "0.3"
libloading = "0.8"
jack = "0.12"
crossbeam-channel = "0.5"
realfft = "3.3"
num-complex = "0.4"
rand = "0.8"
glam = "0.24"
log = "0.4"
toml = "0.8"

# GhostWave integration for RTX AI noise suppression
# Enables full RTX 5090 Blackwell FP4 Tensor Core acceleration
ghostwave-core = { path = "../ghostwave/ghostwave-core", optional = true, features = [
    "nvidia-rtx",
    "onnx-inference",
    "cpal-backend"
] }

[features]
default = ["ghostwave", "rtx"]
ghostwave = ["ghostwave-core"]
rtx = ["ghostwave-core"]