[package]
name = "phantomlink"
version = "0.4.0"
edition = "2024"
description = "Professional audio mixer with RTX AI noise suppression - Elgato Wavelink for Linux"
authors = ["CK Technology LLC"]
license = "MIT"
repository = "https://github.com/ghostkellz/phantomlink"

[dependencies]
eframe = "0.29"
dirs = "5"
alsa = "0.11"
cpal = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nnnoiseless = "0.5"
anyhow = "1.0"
vst = "0.3"
libloading = "0.8"
jack = "0.13"
crossbeam-channel = "0.5"
realfft = "3.3"
num-complex = "0.4"
rand = "0.8"
glam = "0.24"
log = "0.4"
toml = "0.8"
env_logger = "0.11"

# GhostWave v0.3.0 integration for RTX AI noise suppression
ghostwave-core = {
    git = "https://github.com/ghostkellz/ghostwave",
    tag = "v0.3.0",
    optional = true,
    features = ["nvidia-rtx", "cpal-backend", "pipewire-backend"]
}

[features]
default = ["ghostwave", "rtx"]
ghostwave = ["ghostwave-core"]
rtx = ["ghostwave-core"]